Fix resize handle overlapping with border

--- a/src/index.css
+++ b/src/index.css
@@ -69,6 +69,10 @@
   button:focus-visible {
     outline: 4px auto -webkit-focus-ring-color;
   }
+
+  .react-resizable-handle {
+    @apply !right-2 !bottom-2;
+  }
 }
 
 :root.dark {
@@ -87,7 +91,11 @@
   }
 
   div.grid-item {
-    background-color: rgba(10, 10, 10, 0.8) !important;
-    border: 2px solid rgba(50, 50, 50, 0.9)
+    background-color: rgba(10, 10, 10, 1) !important;
+    border: 2px solid rgba(50, 50, 50, 1)
+  }
+
+  .react-resizable-handle::after {
+    @apply !border-neutral-50;
   }
 }
